--- a/index.ipynb
+++ b/index.ipynb
@@ -403,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if restaurant['$'] < alternative['$']:\n",
     "        return True \n",
-    "    return F"
+    "    return False "
    ]
   },
   {
