--- a/index.ipynb
+++ b/index.ipynb
@@ -408,8 +408,9 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['$']) < alternative['$']:\n",
-    "        return True"
+    "    if len(restaurant['$']) < len(alternative['$']):\n",
+    "        return True\n",
+    "    "
    ]
   },
   {
